Rewrite LogFileManager to make it thread safe, by adding a proper life-cycle and ensuring no races can occur