@@ -18,264 +18,288 @@ import java.util.zip.GZIPOutputStream;
 import static java.nio.file.StandardOpenOption.APPEND;
 import static java.nio.file.StandardOpenOption.CREATE;
 
-public class LogFileManager {
-    private final BlockingQueue<String> logQueue = new LinkedBlockingQueue<>(10_000);
-
-    private final ExecutorService writeExecutor = Executors.newSingleThreadExecutor();
-    private final ExecutorService maintenanceExecutor = Executors.newSingleThreadExecutor();
-
-    private BufferedWriter writer;
-    private final AtomicLong dropCount = new AtomicLong(0);
-
-    private File currentLogFile;
-    private String currentLogCanonicalPath;
-
-    public void init() {
-        ensureLogDirectory();
-        startNewSessionLogFile();
-        enforceFileLimit();
-        startAsyncWriter();
+public final class LogFileManager {
+    private enum State {
+        STOPPED, STARTING, RUNNING, STOPPING
     }
 
-    /**
-     * Writes a log message to the file asynchronously.
-     * @param message The log message to write.
-     */
+    private final Object lifecycleLock = new Object();
+    private volatile State state = State.STOPPED;
+
+    private final BlockingQueue<String> logQueue =
+            new LinkedBlockingQueue<>(10_000);
+
+    private ExecutorService writeExecutor;
+    private ExecutorService maintenanceExecutor;
+
+    private volatile BufferedWriter writer;
+    private volatile File currentLogFile;
+    private volatile String currentLogFileCanonicalPath;
+
+    private final AtomicLong dropCount = new AtomicLong();
+    private int pendingWrites = 0;
+
+    public void init() {
+        synchronized (lifecycleLock) {
+            if (state == State.RUNNING || state == State.STARTING) return;
+            state = State.STARTING;
+
+            writeExecutor = Executors.newSingleThreadExecutor(r -> new Thread(r, "YAJL-LogWriter"));
+            maintenanceExecutor = Executors.newSingleThreadExecutor(r -> new Thread(r, "YAJL-LogMaintenance"));
+
+            ensureLogDirectory();
+            startNewSessionLogFile();
+
+            // Now we are ready to process old files
+            state = State.RUNNING;
+
+            // Schedule compression AFTER maintenanceExecutor is ready and state is RUNNING
+            if (LoggerManager.getSettings().isCompressOldLogFiles()) {
+                scheduleCompressionForOldFiles();
+            }
+
+            enforceFileLimit();
+            startAsyncWriter();
+        }
+    }
+
     public void writeLogMessage(String message) {
+        if (state != State.RUNNING) {
+            return;
+        }
+
         if (!logQueue.offer(message)) {
             if (dropCount.incrementAndGet() % 1000 == 0) {
-                LoggerManager.internalLog("Dropped messages: " + dropCount.get());
+                LoggerManager.internalLog(
+                        "Dropped log messages: " + dropCount.get()
+                );
             }
         }
     }
 
-    /**
-     * Ensures the log directory exists.
-     */
-    private void ensureLogDirectory() {
-        String logDirectory = LoggerManager.getSettings().getLogDirectory();
-        try {
-            Path logDirectoryPath = Path.of(logDirectory);
-            Files.createDirectories(logDirectoryPath);
-        } catch (IOException e) {
-            LoggerManager.internalLog("Failed to create log directory: '" + logDirectory + "'");
-        }
-    }
-
-    /**
-     * Starts the async log writer thread.
-     */
     private void startAsyncWriter() {
         writeExecutor.execute(() -> {
-            while (!Thread.currentThread().isInterrupted()) {
-                try {
-                    writeToFile(logQueue.take());
-                } catch (InterruptedException e) {
-                    break;
+            try {
+                while (state == State.RUNNING || !logQueue.isEmpty()) {
+                    String msg = logQueue.poll(500, TimeUnit.MILLISECONDS);
+                    if (msg != null) {
+                        writeToFile(msg);
+                    }
                 }
+            } catch (InterruptedException ignored) {
+            } finally {
+                flushAndCloseWriter();
             }
         });
     }
 
-    private int pendingWrites = 0;
-
-    /**
-     * Handles writing log messages to a file.
-     */
     private void writeToFile(String message) {
-        if (writer == null) {
-            LoggerManager.internalLog("Log writer unavailable, dropping message");
-            return;
-        }
+        BufferedWriter w = writer;
+        if (w == null) return;
 
         try {
-            if (currentLogFile == null || !currentLogFile.exists()) {
-                if (writer != null) {
-                    try {
-                        writer.flush();
-                    } finally {
-                        writer.close();
-                    }
-                }
-                startNewSessionLogFile();
-                enforceFileLimit();
-            }
+            w.write(message);
+            w.newLine();
 
-            writer.write(message);
-            writer.newLine();
             if (++pendingWrites >= 128) {
-                writer.flush();
+                w.flush();
                 pendingWrites = 0;
             }
         } catch (IOException e) {
-            LoggerManager.internalLog("Failed to write log message to file", e);
+            LoggerManager.internalLog("Failed to write log message", e);
         }
     }
 
-    /**
-     * Creates a new log file for each session.
-     */
-    private void startNewSessionLogFile() {
+    public void shutdown() {
+        synchronized (lifecycleLock) {
+            if (state == State.STOPPED || state == State.STOPPING) {
+                return;
+            }
+            state = State.STOPPING;
+        }
+
+        shutdownExecutor(writeExecutor);
+        shutdownExecutor(maintenanceExecutor);
+
+        synchronized (lifecycleLock) {
+            writeExecutor = null;
+            maintenanceExecutor = null;
+            state = State.STOPPED;
+        }
+    }
+
+    private void shutdownExecutor(ExecutorService executor) {
+        if (executor == null) return;
+
+        executor.shutdown();
         try {
-            if (LoggerManager.getSettings().isCompressOldLogFiles()) {
-                for (File f : getSortedLogFiles()) {
-                    if (f.getName().endsWith(".log")
-                            && !new File(f.getPath() + ".gz").exists()
-                            && !new File(f.getPath() + ".compressing").exists()) {
-                        scheduleCompression(f);
+            if (!executor.awaitTermination(3, TimeUnit.SECONDS)) {
+                executor.shutdownNow();
+            }
+        } catch (InterruptedException e) {
+            executor.shutdownNow();
+            Thread.currentThread().interrupt();
+        }
+    }
+
+    private void flushAndCloseWriter() {
+        BufferedWriter w = writer;
+        writer = null;
+
+        if (w != null) {
+            try {
+                w.flush();
+                w.close();
+
+                // mark old file for compression if enabled
+                if (LoggerManager.getSettings().isCompressOldLogFiles() && currentLogFile != null) {
+                    File oldFile = currentLogFile;
+                    File tmp = new File(oldFile.getPath() + ".compressing");
+                    if (oldFile.renameTo(tmp)) {
+                        submitCompression(tmp, new File(oldFile.getPath() + ".gz"));
                     }
                 }
+
+            } catch (IOException e) {
+                LoggerManager.internalLog("Failed to close log writer", e);
             }
+        }
 
-            String sessionId = generateSessionId();
-            String logFileNamePattern = LoggerManager.getSettings().getLogFileNamePattern();
+        currentLogFile = null;
+        currentLogFileCanonicalPath = null;
+    }
 
-            // Replace {sessionId} placeholder with the generated session ID
-            String newLogFileName = logFileNamePattern.replace("{date}", sessionId) + ".log";
-            Path newLogFile = Path.of(LoggerManager.getSettings().getLogDirectory()).resolve(newLogFileName);
-            currentLogFile = newLogFile.toFile();
-            currentLogCanonicalPath = currentLogFile.getCanonicalPath();
-            writer = Files.newBufferedWriter(newLogFile, CREATE, APPEND);
-            pendingWrites = 0;
-        } catch (Exception e) {
-            LoggerManager.internalLog("Failed to start new session log file: '" + currentLogFile + "'", e);
+    private void ensureLogDirectory() {
+        try {
+            Files.createDirectories(
+                    Path.of(LoggerManager.getSettings().getLogDirectory())
+            );
+        } catch (IOException e) {
+            LoggerManager.internalLog("Failed to create log directory", e);
         }
     }
 
-    private void scheduleCompression(@NotNull File file) {
-        File tmp = new File(file.getPath() + ".compressing");
+    private void startNewSessionLogFile() {
+        // compress any old files that are still .log
+        if (LoggerManager.getSettings().isCompressOldLogFiles()) {
+            scheduleCompressionForOldFiles(); // look at all files in dir
+        }
 
-        if (!file.renameTo(tmp)) {
-            LoggerManager.internalLog("Failed to rename file '" + file.getAbsolutePath() + "' to '" + tmp + "'");
+        String name = LoggerManager.getSettings()
+                .getLogFileNamePattern()
+                .replace("{date}", generateSessionId()) + ".log";
+
+        Path file = Path.of(LoggerManager.getSettings().getLogDirectory(), name);
+
+        currentLogFile = file.toFile();
+
+        try {
+            currentLogFileCanonicalPath = currentLogFile.getCanonicalPath();
+        } catch (IOException e) {
+            LoggerManager.internalLog("Failed to get canonical path for current log file", e);
+        }
+
+        try {
+            writer = Files.newBufferedWriter(file, CREATE, APPEND);
+        } catch (IOException e) {
+            LoggerManager.internalLog("Failed to create new buffered writer", e);
+        }
+        pendingWrites = 0;
+    }
+
+    private void scheduleCompressionForOldFiles() {
+        List<File> files = getSortedLogFiles();
+
+        for (File f : files) {
+            File gz = new File(f.getPath() + ".gz");
+            File tmp = new File(f.getPath() + ".compressing");
+
+            if (gz.exists() || tmp.exists()) continue;
+
+            if (!f.renameTo(tmp)) {
+                LoggerManager.internalLog("Failed to mark file for compression: " + f);
+                continue;
+            }
+
+            submitCompression(tmp, gz);
+        }
+    }
+
+    private void submitCompression(File tmp, File gz) {
+        ExecutorService exec = maintenanceExecutor;
+        if (exec == null || state != State.RUNNING) {
+            tmp.renameTo(new File(tmp.getPath().replace(".compressing", "")));
             return;
         }
 
-        maintenanceExecutor.execute(() -> compressLogFile(file, tmp));
+        exec.execute(() -> compressLogFile(tmp, gz));
     }
 
+    private void compressLogFile(@NotNull File tmp, @NotNull File gz) {
+        try (GZIPOutputStream gzip = new GZIPOutputStream(Files.newOutputStream(gz.toPath()))) {
+            // Copy the entire contents of the temporary file into the GZIP stream
+            Files.copy(tmp.toPath(), gzip);
 
-    /**
-     * Generates a unique session ID based on the current timestamp.
-     * @return A unique session ID.
-     */
-    private @NotNull String generateSessionId() {
-        return LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyy-MM-dd_HH-mm-ss-SSS"));
-    }
+            // Delete the temporary .compressing file
+            deleteFile(tmp);
 
-    /**
-     * Deletes old log files if total file count exceeds limit.
-     */
-    private void enforceFileLimit() {
-        if (LoggerManager.getSettings().getLogFileLimit() > -1) {
-            List<File> logFiles = getSortedLogFiles();
-            while (logFiles.size() >= LoggerManager.getSettings().getLogFileLimit()) {
-                deleteFile(logFiles.removeFirst());
+            // Check if compressed file exceeds the size limit and delete if so
+            if (gz.length() >
+                    LoggerManager.getSettings().getCompressedFileSizeLimit() * 1024L) {
+                deleteFile(gz);
             }
+        } catch (IOException e) {
+            LoggerManager.internalLog("Compression failed for " + tmp, e);
+            tmp.renameTo(new File(tmp.getPath().replace(".compressing", "")));
+        }
+    }
+
+    private @NotNull String generateSessionId() {
+        return LocalDateTime.now()
+                .format(DateTimeFormatter.ofPattern("yyyy-MM-dd_HH-mm-ss-SSS"));
+    }
+
+    private void enforceFileLimit() {
+        int limit = LoggerManager.getSettings().getLogFileLimit();
+        if (limit < 0) return;
+
+        // Get all .log and .gz files, ignoring current log file
+        List<File> files = getSortedLogFiles();
+
+        // Delete oldest files until we're under the limit
+        while (files.size() > limit) {
+            File oldest = files.remove(0);
+            deleteFile(oldest);
         }
     }
 
     /**
-     * Retrieves sorted list of log files.
+     * @return A list sorted in ascending order by "last modified", containing all log files (compressed and uncompressed) inside the current log directory except the current log file.
      */
     private @NotNull List<File> getSortedLogFiles() {
-        String logDirectory = LoggerManager.getSettings().getLogDirectory();
-        Path logDirectoryPath = Path.of(logDirectory);
+        File dir = Path.of(LoggerManager.getSettings().getLogDirectory()).toFile();
 
-        // Retrieve all log files from the log directory
-        File[] files = logDirectoryPath.toFile().listFiles((file, name) -> {
+        File[] files = dir.listFiles(f -> {
+            String name = f.getName();
             try {
-                return (name.endsWith(".log") || name.endsWith(".log.gz"))
-                        && (currentLogFile == null || !file.getCanonicalPath().equals(currentLogCanonicalPath));
+                return (name.endsWith(".log") || name.endsWith(".gz")) &&
+                        (!f.getCanonicalPath().equals(currentLogFileCanonicalPath));
             } catch (IOException e) {
-                LoggerManager.internalLog("Failed to get canonical path for file: '" + file.getAbsolutePath() + "'", e);
+                LoggerManager.internalLog("Failed to check canonical path for file: " + f, e);
                 return false;
             }
         });
-        List<File> logFiles = new ArrayList<>();
 
-        if (files != null) {
-            logFiles.addAll(Arrays.asList(files));
+        if (files == null) return List.of();
 
-            // Sort files by last modified time (oldest first)
-            logFiles.sort(Comparator.comparingLong(File::lastModified));
-        }
-
-        return logFiles;
+        List<File> list = new ArrayList<>(Arrays.asList(files));
+        list.sort(Comparator.comparingLong(File::lastModified));
+        return list;
     }
 
-    /**
-     * Deletes the specified file.
-     * @param f the file to delete.
-     */
     private void deleteFile(@NotNull File f) {
         if (!f.delete()) {
-            LoggerManager.internalLog("Unable to delete file: '" + f.getAbsolutePath() + "'");
-        }
-    }
-
-    /**
-     * Compresses a log file to a GZ format.
-     */
-    private void compressLogFile(@NotNull File file, @NotNull File tmp) {
-        File compressedFile = new File(file.getPath() + ".gz");
-
-        try (FileInputStream fis = new FileInputStream(tmp);
-             FileOutputStream fos = new FileOutputStream(compressedFile);
-             GZIPOutputStream gzipOut = new GZIPOutputStream(fos)) {
-
-            byte[] buffer = new byte[8192];
-            int length;
-            while ((length = fis.read(buffer)) > 0) {
-                gzipOut.write(buffer, 0, length);
-            }
-            gzipOut.finish();
-            deleteFile(tmp);
-        } catch (IOException e) {
-            LoggerManager.internalLog("Failed to compress log file: '" + file.getAbsolutePath() + "'", e);
-        }
-
-        // If the compressed file was successfully created and exists, calculate its size
-        if (compressedFile.exists()) {
-            long compressedFileSize = compressedFile.length();
-
-            // If the compressed file is still too large, delete it
-            if (compressedFileSize > LoggerManager.getSettings().getCompressedFileSizeLimit() * 1024L) {
-                deleteFile(compressedFile);
-            }
-        }
-    }
-
-    /**
-     * Stops the log writer gracefully.
-     */
-    public void shutdown() {
-        try {
-            writeExecutor.shutdown();
-            try {
-                if (!writeExecutor.awaitTermination(3, TimeUnit.SECONDS)) {
-                    writeExecutor.shutdownNow();
-                    if (!writeExecutor.awaitTermination(3, TimeUnit.SECONDS)) {
-                        throw new IllegalStateException("Failed to terminate writeExecutor!");
-                    }
-                }
-            } finally {
-                if (writer != null) {
-                    writer.flush();
-                    writer.close();
-                }
-                currentLogFile = null;
-            }
-        } catch (InterruptedException | IOException e) {
-            LoggerManager.internalLog("Failed to stop log message writer!", e);
-        }
-
-        try {
-            maintenanceExecutor.shutdown();
-            if (!maintenanceExecutor.awaitTermination(3, TimeUnit.SECONDS)) {
-                maintenanceExecutor.shutdownNow();
-            }
-        } catch (InterruptedException e) {
-            LoggerManager.internalLog("Failed to stop maintenance worker", e);
+            LoggerManager.internalLog("Failed to delete file: " + f);
         }
     }
 }
